# agent

./: .env.example  .gitattributes  .gitignore  12-AI编程工具部署引导.md  API迁移计划.md  Agent开发流程指南.html  Makefile  PLAN.md  PROGRESS.md  README.md  pyproject.toml  任务清单.md  开发日志.md  部署实战经验.md
.cursor/rules/: karpathy-guidelines.mdc  terminal-output-zh.mdc
apps/: __init__.py
core/: __init__.py  config.py  paths.py
deploy/: .dockerignore  Dockerfile  ecs-build-and-run.sh  ecs-run.env.example  ecs-run.sh  nginx-sheldon.conf  prune-users-ecs.sh  setup-nginx.sh
docs/: deploy-backend.md  deploy-ecs.md  deploy-frontend.md  github-push-guide.md  mcp-integration.md  产品规划-多用户与主管后台.md  用户使用说明.md  部署实战经验.md
examples/: demo_activity.py  filesystem_agent.py  mcp_github_brave_demo.py  ping_agent.py  weather_agent.py
scripts/: build-apk.ps1  check_env.py  check_mcp_registration.py  ci.ps1  deploy-build.ps1  deploy-source-ecs.ps1  deploy-web.ps1  gen-shuo-icons.ps1  prune_test_users.py  smoke_local.py
server/: __init__.py  __main__.py  access_log.py  cors.py  logging_config.py  main.py  mcp_manager.py  run.py  schemas.py
tests/: conftest.py  run_mcp_test.py  test_access_control.py  test_admin_mirror.py  test_auth.py  test_brave_search.py  test_byok.py  test_confirmation.py  test_docker_health.py  test_github_mcp.py  test_integration.py  test_mcp_integration.py  test_mcp_manager_builtin.py  test_mcp_status.py  test_mcp_tools.py  test_message_rollback.py  test_model_policy.py  test_model_profiles.py  test_models.py  test_multimodal.py  test_permissions.py  test_sanitize.py  test_security_policy.py  test_sequential.py  test_session_persist.py  test_skills_loader.py  test_system_tools.py  test_user_isolation_db.py  test_user_profile.py  test_workspace_api.py  test_workspace_binding.py  test_workspace_quota.py  test_workspace_upload.py
(+142 files in other folders)
