[project]
name = "sheldon-agent"
version = "1.0.0"
description = "Sheldon 编程 Agent：CLI + Web，基于大模型的全栈编程助手"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["ai-agent", "coding-assistant", "llm", "tool-calling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "cryptography>=43.0.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
sheldon = "apps.cli.main:main"
sheldon-server = "server.run:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["core", "server", "apps"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
